Fix some issues related to url encoding
-also update pom.xml, wasn't saved properly